--- a/docs/_includes/themes/custom/footer.html
+++ b/docs/_includes/themes/custom/footer.html
@@ -4,5 +4,7 @@
 		Contribute, report issues and fork this via <a href="https://github.com/anand-bhat/dreamlab" rel="noopener" target="_blank"><img src="{{ ASSET_PATH }}/images/github.png" height="14" alt="GitHub"></a>
 		<br><br>
 		This site is not affiliated with DreamLab, Vodafone or any other organization or agency mentioned or linked here.
-		<br><br>Like this page? <a href="https://ko-fi.com/D1D31Q7FI" rel="noopener" target="_blank"><img src="{{ ASSET_PATH }}/images/kofi.png" height="36" width="143" alt="Buy me a Coffee at ko-fi.com"></a>
+		<br><br>
+		Like this page? <a href="https://ko-fi.com/anandbhat" rel="noopener" target="_blank"><img src="{{ ASSET_PATH }}/images/kofi.png" height="36" width="143" alt="Buy me a Coffee at ko-fi.com"></a>
+	</div>
 </footer>
